test/data/codegen/invalid/row_field_collision/queries.cypher
// name: PeopleCollide :many
MATCH (p:Person) RETURN p.name AS x, p.age AS x
